[tool.poetry]
name = "redis_dump"
version = "0.1.0"
description = ""
authors = ["Jim Fitzpatrick <jfitzpat@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pull = "redis_dump.main:pull"
push = "redis_dump.main:push"
seed = "redis_dump.main:seed"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
